issue with overflow

--- a/wdr-1-LabWatch/wdr-1.css
+++ b/wdr-1-LabWatch/wdr-1.css
@@ -99,18 +99,19 @@ body {                                                                         /
 @media only screen and (max-width: 768px) { 
     /* nav-links is main-nav*/
 
-    .main-nav {                                                              /* For burger menu when screen size is 768px or below: */
+    .main-nav ul {                                                              /* For burger menu when screen size is 768px or below: */
+        position: absolute;                                                      /*... menu us outside normal flow and can be offset... */
+        height: 100vh;                                                           /*... height is 100 to go from top to bottom when menu is open (adjust this with top to make lower) */ 
+        width: 50%;                                                              /*... whenm menu is open, it will fill 50% of the screen ... */
+        right: 0;                                                                /*... menu is pushed to the far right of the screen... */   
+        top: 0;                                                                  /*... top 0 (but is you want to place lower, balance with height vh)... */
+        background-color: red;                                                 /*... background color of menu ... */ 
         display: flex;                                                           /* ... define as a flex container (elements will be put next to each other)... */
         flex-direction: column;                                                  /* ... sections will now be stack one on top of each other (i.e. nav, etc.*/
-        justify-content: center;                                                 /*... the links are vertically centered ... */
+        justify-content: space-evenly;                                           /*... the links are vertically centered ... */
         align-items: center;                                                     /*... the links are horizontally centered... */
-        position: absolute;                                                      /*... menu us outside normal flow and can be offset... */
-        right: 0;                                                                /*... menu is pushed to the far right of the screen... */      
-        height: 100vh;                                                           /*... height is 100 to go from top to bottom when menu is open (adjust this with top to make lower) */                   
-        top: 0;                                                                  /*... top 0 (but is you want to place lower, balance with height vh)... */
-        width: 50%;                                                              /*... whenm menu is open, it will fill 50% of the screen ... */
-        background-color: red;                                                 /*... background color of menu ... */        
-    }
+        transform: translate(100%);                                              /*... moves the entire main-links section OFF the screen.  HOWEVER, this just overflows the content right so */              
+    }                                                                            /*    so we need to create a declaration in body (at this size) to hide that overflow.*/
 }
 
 
